--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ name = "ladar"
 authors = [
     {name = "Hervé Beraud", email = "herveberaud.pro@gmail.com"},
 ]
-description = "Audit any running python process."
+description = "Design and run batch replacements."
 readme = "README.md"
 requires-python = ">=3.8"
 license = {text = "MIT"}
@@ -21,8 +21,6 @@ classifiers = [
     "Operating System :: OS Independent",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Development Status :: 3 - Alpha",
