--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,11 @@ classifiers = [
     "Topic :: Sociology",
 ]
 dynamic = ["version"]
-dependencies = ["toml==0.10.2", "pyyaml==6.0.2"]
+dependencies = [
+    "toml==0.10.2",
+    "pyyaml==6.0.2",
+    "tqdm==4.66.5",
+]
 
 [project.urls]
 Homepage = "https://github.com/4383/ladar"
