start implementing dbscan and allow dynamic retrieve of algo params

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ dependencies = [
     "toml==0.10.2",
     "pyyaml==6.0.2",
     "tqdm==4.66.5",
+    "scikit-learn==1.5.2",
+    "numpy==2.1.1",
 ]
 
 [project.urls]
