--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "tqdm==4.66.5",
     "scikit-learn==1.5.2",
     "numpy==2.1.1",
+    "python-levenshtein==0.26.0",
 ]
 
 [project.urls]
